--- a/config/locales/instructions/en.yml
+++ b/config/locales/instructions/en.yml
@@ -51,5 +51,5 @@ en:
         iv: Good
         v: Great!
     personal_key_accent: Write it down or print it out.
-    personal_key_html: This is the only way to regain access to your account if you
-      lose your password or phone. %{accent}
+    personal_key_html: Don't get locked out! Your personal key is the only way to
+      sign in if you forget your password or lose your phone. %{accent}
