--- a/config/locales/instructions/fr.yml
+++ b/config/locales/instructions/fr.yml
@@ -33,11 +33,13 @@ fr:
           texte peuvent s'appliquer.
         fallback_html: Si vous ne pouvez recevoir de messages texte pour le moment,
           vous pouvez %{link}
+        number_message: Nous avons envoyé un code de sécurité au %{number}.
       voice:
         confirm_code_html: Nous venons de vous appeler au %{number}. Vous voulez que
           nous vous appelions de nouveau? %{resend_code_link}
         fallback_html: Si vous ne pouvez recevoir d'appels pour le moment, vous pouvez
           %{link}
+        number_message: Nous venons de vous appeler à %{number}.
       wrong_number_html: Vous avez entré un mauvais numéro de téléphone? %{link}
     password:
       forgot: Vous ne connaissez pas votre mot de passe? Réinitialisez-le après avoir
@@ -61,6 +63,3 @@ fr:
     personal_key_html: Il s'agit de la seule façon de récupérer l'accès à votre compte
       si vous perdez le téléphone sur lequel nous envoyons votre code de sécurité.
       %{accent}
-    registration:
-      email: Choisissez une adresse que vous souhaitez utiliser pour les communications
-        avec le gouvernement.
