--- a/config/locales/idv/fr.yml
+++ b/config/locales/idv/fr.yml
@@ -153,9 +153,14 @@ fr:
         à l'identité, votre profil ne sera pas activé tant que vous n'aurez pas entré
         votre code de confirmation.
       sessions:
+        access_sp: "<strong>%{sp_name}</strong> ne nécessite que <em>que vous</em>
+          accéder à vos avantages."
         no_pii: N'utilisez pas de véritables données personnelles (il s'agit d'une
           démonstration seulement)
         pii: Information personnelle
+        review_message: Lorsque vous entrez votre mot de passe, login.gov sécurise
+          vos informations personnelles. Nous faisons cela pour nous assurer que personne
+          d'autre ne puisse accéder à vos informations.
         success: Nous avons trouvé des données qui correspondent à %{pii_message}
       usps:
         bad_address: Je ne peux pas recevoir de courrier à cette adresse
