Revert "Merge branch 'master' into stevegsa-sp-based-uuids-to-agency-based-uuids"
This reverts commit 14ba01887737f8e75bcf410d3954a3a3dd7a28d0, reversing
changes made to d651c68b711d34fc2615c78f77cc7af518768c36.

--- a/config/locales/instructions/fr.yml
+++ b/config/locales/instructions/fr.yml
@@ -59,5 +59,7 @@ fr:
         v: Excellente!
     personal_key_accent: Notez-la ou imprimez-la.
     personal_key_html: Il s'agit de la seule façon de récupérer l'accès à votre compte
-      si vous perdez le téléphone sur lequel nous envoyons votre code de sécurité.
-      %{accent}
+      si vous perdez votre mot de passe ou votre téléphone. %{accent}
+    registration:
+      email: Choisissez une adresse que vous souhaitez utiliser pour les communications
+        avec le gouvernement.
