--- a/config/locales/instructions/en.yml
+++ b/config/locales/instructions/en.yml
@@ -51,4 +51,6 @@ en:
         v: Great!
     personal_key_accent: Write it down or print it out.
     personal_key_html: This is the only way to regain access to your account if you
-      lose the phone where we send your security code. %{accent}
+      lose your password or phone. %{accent}
+    registration:
+      email: Pick an address you want to use for government communications.
