--- a/config/locales/idv/es.yml
+++ b/config/locales/idv/es.yml
@@ -30,9 +30,11 @@ es:
         personal_key: 'Introduzca su clave personal para esta cuenta. Ejemplo: ABC1-DEF2-G3HI-J456'
         ssn: 'Su número de Seguro Social debe ser ingresado como ### - ## - ####'
         zipcode: 'Su código postal debe ser ingresado como #####-####'
-      unsupported_jurisdiction: NOT TRANSLATED YET
+      unsupported_jurisdiction: Lo sentimos, no podemos verificar personas de este
+        estado.
+      unsupported_jurisdiction_sp: Visita %{sp_name} para acceder a tu cuenta.
     form:
-      activate_by_mail: Activar mi cuenta por correo.
+      activate_by_mail: obtenga un código por carta.
       address1: Dirección de calle 1
       address2: Dirección de calle 2 (opcional)
       city: Ciudad
@@ -40,7 +42,7 @@ es:
       dob_hint: 'Ejemplo: 01/17/1964'
       first_name: Nombre
       last_name: Apellido
-      no_alternate_phone_html: No tengo otro número de teléfono. %{link}
+      no_alternate_phone_html: Si no tiene otro número de teléfono, %{link}
       password: Contraseña
       personal_details: Detalles personales
       phone: Teléfono
@@ -50,12 +52,11 @@ es:
       ssn_label_html: Número de Seguro Social %{tooltip}
       state: Estado
       state_id: NOT TRANSLATED YET
-      state_id_number: NOT TRANSLATED YET
       state_id_type:
         drivers_license: NOT TRANSLATED YET
         drivers_permit: NOT TRANSLATED YET
         state_id_card: NOT TRANSLATED YET
-      state_id_type_label: NOT TRANSLATED YET
+      state_id_type_label: Tipo de número de identificación
       zipcode: Código postal
     index:
       continue_link: Sí, continuar
@@ -111,6 +112,9 @@ es:
       hardfail4_html: NOT TRANSLATED YET
       help_center_html: Visite nuestro <strong>Centro de Ayuda</strong> para obtener
         más información sobre la verificación de su cuenta.
+      id_number: Ingrese un número de identificación del estado o un número de licencia
+        de conducir válidos. El nombre, la fecha de nacimiento y la dirección en su
+        ID <strong>deben coincidir</ strong> la información proporcionada arriba.
       loading: NOT TRANSLATED YET
       mail_sent: Su carta está en camino
       otp_delivery_method:
@@ -123,7 +127,7 @@ es:
         intro: Sólo podemos enviar el código de confirmación al número de teléfono
           vinculado a su identidad legal.
         phone_of_record: Teléfono del registro
-        prepaid: en un contrato, no prepago
+        prepaid: no prepago
         same_as_2fa: Este número de teléfono puede ser el mismo que utilizó para configurar
           su contraseña de un uso único, siempre y cuando cumpla con los criterios
           anteriores.
@@ -152,6 +156,15 @@ es:
           personal. Hacemos esto para asegurarnos de que nadie más pueda acceder a
           su información.
         success: Encontramos registros que coinciden con su %{pii_message}
+      state_id_accordion_header: "¿Qué sucede si no tengo un número de identificación
+        válido?"
+      state_id_accordion_message: "Debe proporcionar un número de identificación válido
+        para continuar verificando \nen línea. No puede estar vencido El nombre, la
+        fecha de nacimiento y la dirección \nen su identificación deben coincidir
+        con la información que proporcionó anteriormente.\n\nSi se mudó recientemente
+        y la dirección que figura en su ID no coincide con su \ndirección oficial
+        actual, no podemos verificarlo en línea en este momento.\n\nSi no tiene un
+        número de identificación válido, regrese a %{sp} para acceder a sus \nbeneficios."
       usps:
         bad_address: No puedo recibir correo en esta dirección
         byline: Le enviaremos una carta con un código de confirmación a su dirección
@@ -211,4 +224,4 @@ es:
       session:
         phone: Obtener un código por teléfono
         review: Encripte sus datos verificados ingresando su contraseña.
-      sessions: Primero, cuéntenos sobre usted
+      sessions: Verifica tu identidad
