Improve invalid authentication error message
**Why**: A fair number of users don't realize they don't already have a
login.gov account and they try to sign in with credentials from an
account at one of our SPs. By adding a link to the password reset page,
we hope users will click the link and submit their email, at which
point they will receive an email letting them know they don't have an
account yet.

--- a/config/locales/devise/en.yml
+++ b/config/locales/devise/en.yml
@@ -13,10 +13,13 @@ en:
     failure:
       already_authenticated: ''
       inactive: Your account hasn't been activated.
-      invalid: Invalid email or password.
+      invalid_link_text: resetting your password
+      invalid_html: The email or password you've entered is wrong. Try %{link}.
       last_attempt: You have one more attempt before your account is locked.
       locked: Your account has been locked.
-      not_found_in_database: Invalid email or password.
+      not_found_in_database_link_text: resetting your password
+      not_found_in_database_html: The email or password you've entered is wrong. Try
+        %{link}.
       session_limited: Your login credentials were used in another browser. Please
         sign in again to continue in this browser.
       timeout: Your session has expired. Please sign in again to continue.
