--- a/config/locales/devise/fr.yml
+++ b/config/locales/devise/fr.yml
@@ -13,10 +13,14 @@ fr:
     failure:
       already_authenticated: ''
       inactive: Votre compte n'est pas encore activé.
-      invalid: Adresse courriel ou mot de passe non valide.
+      invalid_link_text: réinitialiser votre mot de passe
+      invalid_html: L'adresse courriel ou le mot de passe que vous avez entré est
+        erroné. Essayez de %{link}.
       last_attempt: Il vous reste un essai avant que votre compte ne soit verrouillé.
       locked: Votre compte est maintenant verrouillé.
-      not_found_in_database: Adresse courriel ou mot de passe non valide.
+      not_found_in_database_link_text: réinitialiser votre mot de passe
+      not_found_in_database_html: L'adresse courriel ou le mot de passe que vous avez
+        entré est erroné. Essayez de %{link}.
       session_limited: Vos authentifiants ont été utilisés dans un autre navigateur.
         Veuillez vous connecter de nouveau pour continuer avec ce navigateur.
       timeout: Votre session est expirée. Veuillez vous connecter de nouveau pour
