Allow users to delete their login.gov account
**Why**: Users want to be able to delete their account so the government doesn't retain their information.

**How** Provide a link on the accounts page which brings up an are you sure modal after forcing them to enter their password. On that modal they can either select delete account or cancel. In order to prevent uuids from being reused (ie two users with the same uuid from a client perspective) we will retain identity records since they do not contain PII. The "used" uuid is retained in the identity table as an orphan row and the unique index on that field prevents it from being used again.

--- a/config/locales/account/en.yml
+++ b/config/locales/account/en.yml
@@ -23,8 +23,10 @@ en:
         success: Your account has been verified.
         with_phone_button: Verify with your phone
     items:
+      delete_your_account: Delete your account
       personal_key: Personal key
     links:
+      delete_account: Delete
       regenerate_personal_key: Get a new key
     security:
       link: Learn more at the Help Center
