--- a/config/locales/users/es.yml
+++ b/config/locales/users/es.yml
@@ -20,3 +20,13 @@ es:
     totp_setup:
       new:
         qr_img_alt: Código de QR para la app de autenticación
+    delete:
+      heading: NOT TRANSLATED YET
+      subheading: NOT TRANSLATED YET
+      actions:
+        delete: NOT TRANSLATED YET
+        cancel: NOT TRANSLATED YET
+      bullet_1: NOT TRANSLATED YET
+      bullet_2_loa1: NOT TRANSLATED YET
+      bullet_2_loa3: NOT TRANSLATED YET
+      bullet_3: NOT TRANSLATED YET
