--- a/config/locales/users/fr.yml
+++ b/config/locales/users/fr.yml
@@ -20,3 +20,13 @@ fr:
     totp_setup:
       new:
         qr_img_alt: Code QR pour l'application d'authentification
+    delete:
+      heading: NOT TRANSLATED YET
+      subheading: NOT TRANSLATED YET
+      actions:
+        delete: NOT TRANSLATED YET
+        cancel: NOT TRANSLATED YET
+      bullet_1: NOT TRANSLATED YET
+      bullet_2_loa1: NOT TRANSLATED YET
+      bullet_2_loa3: NOT TRANSLATED YET
+      bullet_3: NOT TRANSLATED YET
