Make OTP expiration in messages match config
**Why**: So that the period of time in which messages say they will
expire matches how long they're configured to expire in the config

--- a/config/locales/jobs/en.yml
+++ b/config/locales/jobs/en.yml
@@ -3,4 +3,4 @@ en:
   jobs:
     sms_otp_sender_job:
       message: "%{code} is your %{app} one-time security code. This code will expire
-        in five minutes."
+        in %{expiration} minutes."
