--- a/config/locales/voice/en.yml
+++ b/config/locales/voice/en.yml
@@ -3,5 +3,5 @@ en:
   voice:
     otp:
       message: Hello! Your login.gov one time passcode is, %{code}, again, your passcode
-        is, %{code}. This code expires in five minutes.
+        is, %{code}. This code expires in %{expiration} minutes.
       repeat_instructions: Press 1 to repeat this message.
