add expiration to other translations

--- a/config/locales/jobs/es.yml
+++ b/config/locales/jobs/es.yml
@@ -3,4 +3,4 @@ es:
   jobs:
     sms_otp_sender_job:
       message: "%{code} es su %{app} código de seguridad de sólo un uso. Este código
-        caducará en cinco minutos."
+        caducará en %{expiration} minutos."
