--- a/config/locales/voice/fr.yml
+++ b/config/locales/voice/fr.yml
@@ -4,5 +4,5 @@ fr:
     otp:
       message: Bonjour! Votre code de sécurité à utilisation unique de login.gov est,
         %{code}, de nouveau, votre code de sécurité est, %{code}. Ce code expirera
-        dans cinq minutes.
+        dans %{expiration} minutes.
       repeat_instructions: Appuyez sur 1 pour répéter votre code.
