LG-1 delete account: spanish and french translations
**Why**: Translations are not available for French and Spanish

**How** Update the locale files

--- a/config/locales/account/fr.yml
+++ b/config/locales/account/fr.yml
@@ -25,10 +25,10 @@ fr:
         success: Votre compte a été vérifié.
         with_phone_button: Verifiez avec votre téléphone
     items:
-      delete_your_account: NOT TRANSLATED YET
+      delete_your_account: Supprimer votre compte
       personal_key: Clé personnelle
     links:
-      delete_account: NOT TRANSLATED YET
+      delete_account: Effacer
       regenerate_personal_key: Obtenez une nouvelle clé
     security:
       link: En apprendre davantage dans le Centre d'aide
