--- a/config/locales/headings/es.yml
+++ b/config/locales/headings/es.yml
@@ -3,7 +3,7 @@ es:
   headings:
     account:
       account_history: Historial de cuenta
-      account_management: NOT TRANSLATED YET
+      account_management: Manejo de cuenta
       login_info: Su cuenta
       profile_info: Información de perfil
       reactivate: Reactive su cuenta
