--- a/config/locales/headings/fr.yml
+++ b/config/locales/headings/fr.yml
@@ -3,7 +3,7 @@ fr:
   headings:
     account:
       account_history: Historique du compte
-      account_management: NOT TRANSLATED YET
+      account_management: Gestion de compte
       login_info: Votre compte
       profile_info: Information du profil
       reactivate: Réactivez votre compte
