--- a/config/locales/account/es.yml
+++ b/config/locales/account/es.yml
@@ -23,10 +23,10 @@ es:
         success: Su cuenta ha sido verificada.
         with_phone_button: Verifique con su teléfono.
     items:
-      delete_your_account: NOT TRANSLATED YET
+      delete_your_account: Eliminar su cuenta
       personal_key: Clave personal
     links:
-      delete_account: NOT TRANSLATED YET
+      delete_account: Eliminar
       regenerate_personal_key: Obtenga una clave nueva.
     security:
       link: Obtenga más información en el Centro de ayuda
