--- a/config/locales/users/es.yml
+++ b/config/locales/users/es.yml
@@ -21,12 +21,14 @@ es:
       new:
         qr_img_alt: Código de QR para la app de autenticación
     delete:
-      heading: NOT TRANSLATED YET
-      subheading: NOT TRANSLATED YET
+      heading: "¿Está seguro que desea eliminar su cuenta?"
+      subheading: Si elimina su cuenta
       actions:
-        delete: NOT TRANSLATED YET
-        cancel: NOT TRANSLATED YET
-      bullet_1: NOT TRANSLATED YET
-      bullet_2_loa1: NOT TRANSLATED YET
-      bullet_2_loa3: NOT TRANSLATED YET
-      bullet_3: NOT TRANSLATED YET
+        delete: Eliminar cuenta
+        cancel: Anular y regresar a su perfil
+      bullet_1: Usted no tendrá una %{app} cuenta.
+      bullet_2_loa1: "%{app} borrará su email, contraseña y número de teléfono de
+        nuestro sistema."
+      bullet_2_loa3: "%{app} borrará su email, contraseña, número de teléfono, nombre,
+        dirección, fecha de nacimiento y número de Seguro Social de nuestro sistema."
+      bullet_3: Usted no podrá tener acceso seguro a su información usando %{app}
