--- a/config/locales/users/fr.yml
+++ b/config/locales/users/fr.yml
@@ -21,12 +21,16 @@ fr:
       new:
         qr_img_alt: Code QR pour l'application d'authentification
     delete:
-      heading: NOT TRANSLATED YET
-      subheading: NOT TRANSLATED YET
+      heading: Êtes-vous sûr de vouloir supprimer votre compte?
+      subheading: Si vous supprimez votre compte
       actions:
-        delete: NOT TRANSLATED YET
-        cancel: NOT TRANSLATED YET
-      bullet_1: NOT TRANSLATED YET
-      bullet_2_loa1: NOT TRANSLATED YET
-      bullet_2_loa3: NOT TRANSLATED YET
-      bullet_3: NOT TRANSLATED YET
+        delete: Supprimer le compte
+        cancel: Annuler et retourner à votre profil
+      bullet_1: Vous n'aurez pas de compte %{app}.
+      bullet_2_loa1: "%{app} supprimera votre adresse e-mail, votre mot de passe et
+        votre numéro de téléphone de notre système."
+      bullet_2_loa3: "%{app} supprimera votre adresse e-mail, votre mot de passe et
+        votre numéro de téléphone, votre nom, votre adresse, votre date de naissance
+        et votre numéro de sécurité sociale de notre système."
+      bullet_3: Vous ne pourrez pas accéder en toute sécurité à vos informations en
+        utilisant %{app}.
