--- a/config/locales/instructions/en.yml
+++ b/config/locales/instructions/en.yml
@@ -28,7 +28,8 @@ en:
         confirm_code_html: Need another code? %{resend_code_link}. Message rates may
           apply.
         fallback_html: If you can't get text messages right now, you can %{link}
-        number_message: We sent a security code to %{number}.
+        number_message: We sent a security code to %{number}. This code will expire
+          in %{expiration} minutes.
       voice:
         confirm_code_html: Want us to call you again? %{resend_code_link}
         fallback_html: If you can't take a phone call right now, you can %{link}
