--- a/config/locales/errors/es.yml
+++ b/config/locales/errors/es.yml
@@ -31,6 +31,7 @@ es:
       no_pending_profile: Ningún perfil está esperando verificación
       not_found: no encontrado
       not_locked: no estaba bloqueado
+      not_pwned: NOT TRANSLATED YET
       not_saved:
         one: '1 error no permitió guardar este %{resource}:'
         other: "%{count} errores no permitieron guardar este %{resource}:"
