LG-134 Update delete account message
**Why**: The reauthenticate process reuses edit screen verbiage which forces the text to include a factor that is changing (ie phone number).

**How**: We expanded the reauthenticate verbiage to allow for full text messages that don't have a specific factor that is changing. This new feature allows us to give full verbiage for delete account while reusing the reauthenticate code.

--- a/config/locales/help_text/en.yml
+++ b/config/locales/help_text/en.yml
@@ -11,3 +11,6 @@ en:
       intro_html: 'This is the only information %{app_name} will share with %{sp}:'
       phone: Phone number
       social_security_number: Social Security number
+    no_factor:
+      delete_account: To delete your account, please confirm your password and security
+        code.
