--- a/config/locales/help_text/fr.yml
+++ b/config/locales/help_text/fr.yml
@@ -12,3 +12,6 @@ fr:
         %{sp}:'
       phone: Numéro de téléphone
       social_security_number: Numéro de sécurité sociale
+    no_factor:
+      delete_account: Pour supprimer votre compte, veuillez confirmer votre mot de
+        passe et votre code de sécurité.
