--- a/config/locales/forms/en.yml
+++ b/config/locales/forms/en.yml
@@ -72,6 +72,8 @@ en:
       code: One-time security code
       personal_key: Personal key
       try_again: Use another phone number
+    two_factor_choice:
+      legend: Select an option to secure your account
     verify_profile:
       instructions: Enter the ten-character code in the letter we sent you.
       name: Confirmation code
