--- a/config/locales/forms/fr.yml
+++ b/config/locales/forms/fr.yml
@@ -75,6 +75,8 @@ fr:
       code: Code de sécurité
       personal_key: Clé personnelle
       try_again: Utilisez un autre numéro de téléphone
+    two_factor_choice:
+      legend: Sélectionnez une option pour sécuriser votre compte
     verify_profile:
       instructions: Entrez le code à dix caractères qui se trouve dans la lettre que
         nous vous avons envoyée.
