--- a/config/locales/devise/en.yml
+++ b/config/locales/devise/en.yml
@@ -118,7 +118,6 @@ en:
         sms: Text message (SMS)
         title: How should we send you a code?
         voice: Phone call
-      otp_phone_label: Phone number
       otp_phone_label_info: Mobile phone or landline
       otp_phone_label_info_mobile_only: Mobile phone
       otp_setup_html: "<strong>Every time you log in,</strong> we will send you a
@@ -131,6 +130,11 @@ en:
       personal_key_header_text: Enter your personal key
       personal_key_prompt: You can use this personal key once. If you still need a
         code after signing in, go to your account settings page to get a new one.
+      phone_sms_label: Mobile phone number
+      phone_sms_info_html: We'll text a security code <strong>each time you sign in</strong>.
+      phone_voice_label: Phone number
+      phone_voice_info_html: We'll call you with a security code <strong>each time
+        you sign in</strong>.
       piv_cac_fallback:
         link: Use your PIV/CAC instead
         text_html: Do you have your PIV/CAC? %{link}
@@ -145,6 +149,20 @@ en:
         voice_link_text: Receive a code via phone call
       totp_header_text: Enter your authentication app code
       totp_info: Use any authenticator app to scan the QR code below.
+      two_factor_choice: Secure your account
+      two_factor_choice_options:
+        voice: Phone call
+        voice_info: Get your security code via phone call.
+        sms: Text message / SMS
+        sms_info: Get your security code via text message / SMS.
+        auth_app: Authentication application
+        auth_app_info: Set up an authentication application to get your security code
+          without providing a phone number.
+        piv_cac: Government employees
+        piv_cac_info: Use your PIV/CAC card to secure your account.
+      two_factor_choice_intro: login.gov makes sure you can access your account by
+        adding a second layer of security.
+      two_factor_choice_cancel: "‹ Choose another option"
       two_factor_setup: Add a phone number
       user:
         new_otp_sent: We sent you a new one-time security code.
