--- a/config/locales/devise/fr.yml
+++ b/config/locales/devise/fr.yml
@@ -130,7 +130,6 @@ fr:
         sms: Message texte (SMS)
         title: Comment devrions-nous vous envoyer un code?
         voice: Appel téléphonique
-      otp_phone_label: Numéro de téléphone
       otp_phone_label_info: Cellulaire ou ligne fixe. Si vous entrez une ligne fixe,
         veuillez choisir l'option "Appel téléphonique" ci-dessous.
       otp_phone_label_info_mobile_only: NOT TRANSLATED YET
@@ -145,6 +144,12 @@ fr:
       personal_key_prompt: Vous pouvez utiliser cette clé personnelle une fois seulement.
         Si vous avez toujours besoin d'un code après votre connexion, allez à la page
         des réglages de votre compte pour en obtenir un nouveau.
+      phone_sms_label: Numéro de téléphone portable
+      phone_sms_info_html: Nous vous enverrons un code de sécurité <strong>chaque
+        fois que vous vous connectez</strong>.
+      phone_voice_label: Numéro de téléphone
+      phone_voice_info_html: Nous vous appellerons avec un code de sécurité <strong>chaque
+        fois que vous vous connectez</strong>.
       piv_cac_fallback:
         link: Utilisez plutôt votre PIV/CAC
         text_html: Avez-vous votre PIV/CAC? %{link}
@@ -160,6 +165,20 @@ fr:
       totp_header_text: Entrez votre code d'application d'authentification
       totp_info: Utilisez n'importe quelle application d'authentification pour balayer
         le code QR ci-dessous.
+      two_factor_choice: Sécurise ton compte
+      two_factor_choice_options:
+        voice: Appel téléphonique
+        voice_info: Obtenez votre code de sécurité par appel téléphonique.
+        sms: SMS
+        sms_info: Obtenez votre code de sécurité par SMS
+        auth_app: Application d'authentification
+        auth_app_info: Configurez une application d'authentification pour obtenir
+          votre code de sécurité sans fournir de numéro de téléphone.
+        piv_cac: Employés du gouvernement
+        piv_cac_info: Utilisez votre carte PIV / CAC pour sécuriser votre compte.
+      two_factor_choice_intro: login.gov s'assure que vous pouvez accéder à votre
+        compte en ajoutant une deuxième couche de sécurité.
+      two_factor_choice_cancel: "‹ Choisissez une autre option"
       two_factor_setup: Ajoutez un numéro de téléphone
       user:
         new_otp_sent: Nous vous avons envoyé un code de sécurité à utilisation unique.
