--- a/config/locales/titles/es.yml
+++ b/config/locales/titles/es.yml
@@ -16,6 +16,9 @@ es:
       confirm: Confirme la contraseña de su cuenta
       forgot: Restablezca la contraseña de su cuenta
     personal_key: Por si acaso
+    phone_setup:
+      voice: Envíe su código de seguridad a través de una llamada telefónica
+      sms: Envíe su código de seguridad a través de un mensaje de texto
     piv_cac_setup:
       new: Use su tarjeta PIV/CAC para asegurar su cuenta
       certificate:
