Update `remember device` translations
**WHY**
- To be more accurate by specifying `browser` instead of `device`
- To be more helpful to our spanish and french speaking friends

--- a/config/locales/forms/es.yml
+++ b/config/locales/forms/es.yml
@@ -17,7 +17,7 @@ es:
       show_hdr: Crear una contraseña segura
     messages:
       current_address: Debería poder recibir correo en esta dirección.
-      remember_device: NOT TRANSLATED YET
+      remember_device: Recuerde este navegador por %{duration} días
     passwords:
       edit:
         buttons:
