--- a/config/locales/account/es.yml
+++ b/config/locales/account/es.yml
@@ -8,9 +8,13 @@ es:
       auth_app_disabled: no permitido
       auth_app_enabled: permitido
       authentication_app: App de autenticación
+      current_ip: Dirección IP actual
+      current_sign_in: Hora de inicio de sesión actual
       dob: Fecha de nacimiento
       email: Email
       full_name: Nombre completo
+      last_ip: Dirección IP anterior
+      last_sign_in: Hora de inicio de sesión anterior
       login: Información para iniciar sesión
       password: Contraseña
       phone: Teléfono
