--- a/config/locales/idv/fr.yml
+++ b/config/locales/idv/fr.yml
@@ -122,6 +122,10 @@ fr:
       id_number: Entrez un numéro d'identification d'état ou un numéro de permis de
         conduire valide. Le nom, la date de naissance et l'adresse de votre ID <strong>doivent</strong>
         correspondent les informations fournies ci-dessus.
+      jurisdiction:
+        why: TODO
+        where: TODO
+        no_id: TODO
       loading: NOT TRANSLATED YET
       mail_sent: Votre lettre est en route
       otp_delivery_method:
@@ -227,9 +231,11 @@ fr:
       fail: Nous sommes dans l'incapacité de vérifier votre identité pour le moment
       hardfail: Nous sommes dans l'incapacité de vérifier votre identité avec %{app}
       intro: Aidez-nous à vous identifier
+      jurisdiction: TODO
       mail:
         resend: Vous voulez une autre lettre?
         verify: Vous voulez une lettre?
+      no_id: TODO
       otp_delivery_method: NOT TRANSLATED YET
       phone: Numéro de téléphone enregistré
       review: Réviser et soumettre
@@ -238,3 +244,4 @@ fr:
         phone: Obtenez un code par téléphone
         review: Encryptez vos données personnelles en entrant votre mot de passe
       sessions: Vérifier votre identité
+      unsupported_jurisdiction: TODO
