--- a/config/locales/idv/fr.yml
+++ b/config/locales/idv/fr.yml
@@ -123,9 +123,9 @@ fr:
         conduire valide. Le nom, la date de naissance et l'adresse de votre ID <strong>doivent</strong>
         correspondent les informations fournies ci-dessus.
       jurisdiction:
-        why: TODO
-        where: TODO
-        no_id: TODO
+        why: Pour vérifier votre identité, nous aurons besoin d'informations provenant de votre carte d'identité officielle
+        where: Où a été délivré votre permis de conduire, votre permis de conduire ou votre carte d'identité?
+        no_id: Je n'ai pas de carte d'identité officielle
       loading: NOT TRANSLATED YET
       mail_sent: Votre lettre est en route
       otp_delivery_method:
@@ -231,11 +231,11 @@ fr:
       fail: Nous sommes dans l'incapacité de vérifier votre identité pour le moment
       hardfail: Nous sommes dans l'incapacité de vérifier votre identité avec %{app}
       intro: Aidez-nous à vous identifier
-      jurisdiction: TODO
+      jurisdiction: Choisissez votre état
       mail:
         resend: Vous voulez une autre lettre?
         verify: Vous voulez une lettre?
-      no_id: TODO
+      no_id: Nous ne sommes pas en mesure de vérifier votre identité sans une pièce d'identité officielle
       otp_delivery_method: NOT TRANSLATED YET
       phone: Numéro de téléphone enregistré
       review: Réviser et soumettre
@@ -244,4 +244,4 @@ fr:
         phone: Obtenez un code par téléphone
         review: Encryptez vos données personnelles en entrant votre mot de passe
       sessions: Vérifier votre identité
-      unsupported_jurisdiction: TODO
+      unsupported_jurisdiction: Nous ne sommes pas en mesure de vérifier les identités à l'aide d'identifiants provenant de %{state}
