--- a/config/locales/forms/es.yml
+++ b/config/locales/forms/es.yml
@@ -78,4 +78,4 @@ es:
       name: Código de confirmación
       submit: Confirmar cuenta
       title: Confirme su cuenta
-    select: '- TODO -'
+    select: '- Seleccionar -'
