--- a/config/locales/idv/es.yml
+++ b/config/locales/idv/es.yml
@@ -116,9 +116,9 @@ es:
         de conducir válidos. El nombre, la fecha de nacimiento y la dirección en su
         ID <strong>deben coincidir</ strong> la información proporcionada arriba.
       jurisdiction:
-        why: TODO
-        where: TODO
-        no_id: TODO
+        why: Para verificar su identidad, necesitaremos información de su identificación emitida por el estado
+        where: ¿Dónde se emitió su licencia de conducir, permiso de conducir o identificación del estado?
+        no_id: No tengo una identificación emitida por el estado
       loading: NOT TRANSLATED YET
       mail_sent: Su carta está en camino
       otp_delivery_method:
@@ -218,11 +218,11 @@ es:
       fail: No pudimos verificar su identidad.
       hardfail: No pudimos verificar su identidad con %{app}.
       intro: Ayúdenos a identificarlo
-      jurisdiction: TODO
+      jurisdiction: Elija su estado
       mail:
         resend: "¿Desea otra carta?"
         verify: "¿Desea una carta?"
-      no_id: TODO
+      no_id: No podemos verificar su identidad sin una identificación emitida por el estado
       otp_delivery_method: NOT TRANSLATED YET
       phone: Número de teléfono del registro
       review: Revise y envíe
@@ -231,4 +231,4 @@ es:
         phone: Obtener un código por teléfono
         review: Encripte sus datos verificados ingresando su contraseña.
       sessions: Verifica tu identidad
-      unsupported_jurisdiction: TODO
+      unsupported_jurisdiction: No podemos verificar identidades usando ID emitidos desde %{state}
